# Kampela

./: .gitignore  Cargo.toml  README.md
application/rust/database/: Cargo.toml
application/rust/database/for_tests/: load_metadata_westendV9430_Alice-sr25519.txt  metadata_westend_shortened.txt
application/rust/database/src/: derivation.rs  error.rs  lib.rs  nfc_fountain.rs  payload.rs  process_input.rs  sign_with_companion.rs  storage.rs  tests.rs  traits.rs  utils.rs
common/: Cargo.toml
common/src/: lib.rs
firmware/development/kampela/: Cargo.toml  Readme.md  binarize.sh  heap.x
firmware/development/kampela-screen-calibration/: Cargo.toml  memory.x
firmware/development/kampela-screen-calibration/src/: main.rs
firmware/development/kampela-ui/: Cargo.toml
firmware/development/kampela-ui/src/: backup.rs  data_state.rs  display_def.rs  end_screen.rs  lib.rs  main.rs  pin.rs  platform.rs  qr.rs  restore_or_generate.rs  seed_entry.rs  transaction.rs  uistate.rs
firmware/development/kampela/.cargo/: config.toml
firmware/development/kampela/qr/: meta_sliced_westend9430
firmware/development/kampela/src/: main.rs  nfc.rs  touch.rs  ui.rs
firmware/development/kampela_experiments_efm32pg23/app/: Cargo.toml
firmware/development/kampela_experiments_efm32pg23/app/src/: led_blinker.rs  lib.rs  main.rs  se_aes_gcm.rs  se_command.rs  se_rng.rs
firmware/development/kampela_experiments_efm32pg23/efm32pg23_fix/: Cargo.toml  README.md  device.x
firmware/development/kampela_experiments_efm32pg23/efm32pg23_fix/src/: acmp1_s.rs  buram_ns.rs  burtc_ns.rs  cmu_ns.rs  dcdc_ns.rs  devinfo.rs  dmem_s.rs  dpll0_s.rs  emu_s.rs  eusart0_s.rs  eusart1_s.rs  fsrco_ns.rs  gpcrc_s.rs  gpio_s.rs  hfrco0_ns.rs  hfxo0_ns.rs  hostmailbox_s.rs  i2c1_ns.rs  iadc0_s.rs  icache0_ns.rs  keyscan_ns.rs  lcd_s.rs  lcdrf_s.rs  ldma_s.rs  ldmaxbar_s.rs  letimer0_s.rs  lfrco_ns.rs  lfxo_ns.rs  lib.rs  msc_ns.rs  pcnt0_ns.rs  prs_ns.rs  scratchpad_s.rs  semailbox_s_host.rs  smu_ns.rs  smu_s_cfgns.rs  syscfg_s.rs  syscfg_s_cfgns.rs  sysrtc0_ns.rs  timer2_s.rs  (+4 more)
firmware/development/kampela_experiments_efm32pg23/efm32pg23_fix/src/acmp0_ns/: ien.rs  swrst.rs
firmware/development/kampela_experiments_efm32pg23/efm32pg23_fix/src/acmp0_s/: cfg.rs  inputctrl.rs  ipversion.rs  status.rs  syncbusy.rs
firmware/development/kampela_experiments_efm32pg23/efm32pg23_fix/src/acmp1_s/: ctrl.rs  if_.rs
firmware/development/kampela_experiments_efm32pg23/efm32pg23_fix/src/buram_ns/: ret0_reg.rs  ret12_reg.rs  ret14_reg.rs  ret15_reg.rs  ret17_reg.rs  ret18_reg.rs  ret19_reg.rs  ret20_reg.rs  ret21_reg.rs  ret22_reg.rs  ret24_reg.rs  ret26_reg.rs  ret28_reg.rs  ret29_reg.rs  ret2_reg.rs  ret30_reg.rs  ret31_reg.rs  ret3_reg.rs  ret4_reg.rs  ret5_reg.rs  ret8_reg.rs
firmware/development/kampela_experiments_efm32pg23/efm32pg23_fix/src/buram_s/: ret10_reg.rs  ret11_reg.rs  ret13_reg.rs  ret16_reg.rs  ret1_reg.rs  ret23_reg.rs  ret25_reg.rs  ret27_reg.rs  ret6_reg.rs  ret7_reg.rs  ret9_reg.rs
firmware/development/kampela_experiments_efm32pg23/efm32pg23_fix/src/burtc_ns/: cmd.rs  comp.rs  em4wuen.rs  en.rs  if_.rs  lock.rs  precnt.rs
firmware/development/kampela_experiments_efm32pg23/efm32pg23_fix/src/burtc_s/: cfg.rs  ien.rs  status.rs  syncbusy.rs
firmware/development/kampela_experiments_efm32pg23/efm32pg23_fix/src/cmu_ns/: calcmd.rs  clken0.rs  clken1.rs  em01grpaclkctrl.rs  em01grpcclkctrl.rs  exportclkctrl.rs  if_.rs  lesensehfclkctrl.rs  lock.rs  sysclkctrl.rs  traceclkctrl.rs  wdog0clkctrl.rs  wdog1clkctrl.rs  wdoglock.rs
firmware/development/kampela_experiments_efm32pg23/efm32pg23_fix/src/cmu_s/: calcnt.rs  calctrl.rs  dpllrefclkctrl.rs  em23grpaclkctrl.rs  em4grpaclkctrl.rs  eusart0clkctrl.rs  iadcclkctrl.rs  ien.rs  lcdclkctrl.rs  pcnt0clkctrl.rs  status.rs  sysrtc0clkctrl.rs  vdac0clkctrl.rs
firmware/development/kampela_experiments_efm32pg23/efm32pg23_fix/src/dcdc_ns/: ctrl.rs  em23ctrl0.rs  ien.rs  if_.rs  status.rs  syncbusy.rs
firmware/development/kampela_experiments_efm32pg23/efm32pg23_fix/src/dcdc_s/: em01ctrl0.rs  lock.rs  lockstatus.rs  pfmxctrl.rs
firmware/development/kampela_experiments_efm32pg23/efm32pg23_fix/src/devinfo/: caltemp.rs  custominfo.rs  emutemp.rs  eui48h.rs  eui48l.rs  eui64h.rs  eui64l.rs  extinfo.rs  hfrcodpllcal0.rs  hfrcodpllcal1.rs  hfrcodpllcal10.rs  hfrcodpllcal11.rs  hfrcodpllcal12.rs  hfrcodpllcal13.rs  hfrcodpllcal14.rs  hfrcodpllcal15.rs  hfrcodpllcal16.rs  hfrcodpllcal17.rs  hfrcodpllcal2.rs  hfrcodpllcal3.rs  hfrcodpllcal4.rs  hfrcodpllcal5.rs  hfrcodpllcal6.rs  hfrcodpllcal7.rs  hfrcodpllcal8.rs  hfrcodpllcal9.rs  hfrcoem23cal0.rs  hfrcoem23cal1.rs  hfrcoem23cal10.rs  hfrcoem23cal11.rs  hfrcoem23cal12.rs  hfrcoem23cal13.rs  hfrcoem23cal14.rs  hfrcoem23cal15.rs  hfrcoem23cal16.rs  hfrcoem23cal17.rs  hfrcoem23cal2.rs  hfrcoem23cal3.rs  hfrcoem23cal4.rs  hfrcoem23cal5.rs  (+31 more)
firmware/development/kampela_experiments_efm32pg23/efm32pg23_fix/src/dmem_ns/: eccerraddr1.rs  eccmerrind.rs  ipversion.rs
firmware/development/kampela_experiments_efm32pg23/efm32pg23_fix/src/dmem_s/: cmd.rs  ctrl.rs  eccerraddr0.rs  ien.rs  if_.rs
firmware/development/kampela_experiments_efm32pg23/efm32pg23_fix/src/dpll0_ns/: cfg.rs  cfg1.rs  ien.rs  lock.rs  status.rs
firmware/development/kampela_experiments_efm32pg23/efm32pg23_fix/src/dpll0_s/: en.rs  if_.rs  ipversion.rs
firmware/development/kampela_experiments_efm32pg23/patches/: Cargo.toml
firmware/development/kampela_experiments_efm32pg23/patches/src/: big_seed.rs  collect_nfc_fountain.rs  derivation.rs  error.rs  lib.rs  phone_signature.rs  phrase.rs  wordlist.rs
firmware/development/kolibri/: Cargo.toml
firmware/development/kolibri/src/: calibration.rs  display_def.rs  lib.rs  main.rs  uistate.rs
firmware/development/ui-simulate/: Cargo.toml
firmware/development/ui-simulate/src/: display_def.rs  main.rs  onboarding_backup.rs  pin.rs  restore_or_generate.rs  seed_entry.rs  uistate.rs
rust/siltti/: Cargo.toml  build.rs  uniffi.toml
rust/siltti/src/: ffi_types.rs
(+1562 files in other folders)
