[package]
name = "kampela-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-metadata = {git = "https://github.com/paritytech/frame-metadata", rev = "1ea329920838b3f4170f421cde53ce7e6a15ccee", default-features = false, features = ["v14", "decode"]}
parity-scale-codec = {version = "3.1.5", default-features = false, features = ["derive"]}
sp-core = {version = "7.0.0", default-features = false, features = ["full_crypto"]}

[lib]
name = "kampela_common"
crate-type = ["lib"]

[features]
default = ["std"]

std = []
