[package]
name = "kampela-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = {version = "3.1.5", default-features = false, features = ["derive"]}
sp-core = {version = "7.0.0", default-features = false, features = ["full_crypto"]}

[lib]
name = "kampela_common"
crate-type = ["lib"]

[features]
default = ["std"]

std = []
