[package]
name = "siltti"
version = "0.1.0"
edition = "2021"

[dependencies]
qr_reader = { path = "../qr_reader" }
uniffi = { version = "0.18.0", features=["builtin-bindgen"] }

[build-dependencies]
uniffi_build = { version = "0.18.0", features = ["builtin-bindgen"] }

[lib]
crate-type = ["staticlib", "cdylib"]
