[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-metadata = {git = "https://github.com/paritytech/frame-metadata", rev = "1ea329920838b3f4170f421cde53ce7e6a15ccee", default-features = false, features = ["v14", "decode"]}
hex = "0.4.3"
parity-scale-codec = "3.1.5"
sled = "0.34.7"
sp-core = {version = "7.0.0", default-features = false, features = ["full_crypto"]}
substrate_parser = {git = "https://github.com/Alzymologist/substrate-parser", rev = "9f6e9ad9229cb6a0138ac37e7ecc6b00e743762e"}
thiserror = "1.0.35"

kampela-common = {path = "../../../common"}
lt-codes = {git = "https://github.com/Alzymologist/LT-codes", rev = "575678620bd45451f68a993d450beac0496fcf0a"}

[lib]
name = "database"
crate-type = ["lib"]
