[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-metadata = {git = "https://github.com/paritytech/frame-metadata", rev = "1ea329920838b3f4170f421cde53ce7e6a15ccee", default-features = false, features = ["v14", "decode"]}
hex = "0.4.3"
parity-scale-codec = "3.1.5"
sled = "0.34.7"
sp-core = {version = "7.0.0", default-features = false, features = ["full_crypto"]}
substrate_parser = {git = "https://github.com/Alzymologist/substrate-parser", rev = "9f6e9ad9229cb6a0138ac37e7ecc6b00e743762e"}
thiserror = "1.0.35"

kampela-common = {path = "../../../common"}
lt-codes = {git = "https://github.com/Alzymologist/LT-codes", rev = "20c958f29a9772c8a3c8fa6e9dc2a1f3ef3557f7"}

[lib]
name = "database"
crate-type = ["lib"]
