[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
parity-scale-codec = "3.1.5"
sled = "0.34.7"
sp-core = {version = "9.0.0", default-features = false, features = ["full_crypto"]}
substrate_parser = {git = "https://github.com/Alzymologist/substrate-parser", default-features = false}
thiserror = "1.0.35"

kampela-common = {path = "../../../common"}
lt-codes = {git = "https://github.com/Alzymologist/LT-codes"}
rand = "0.8.4"

[lib]
name = "database"
crate-type = ["lib"]
