[package]
name = "kampela-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"
embedded-text = {version = "0.5.0", default-features = false}
bitvec = {version = "1.0.1", default-features = false, features = ["alloc"]}
embedded-graphics-simulator = { version = "0.3.0", optional = true }
ux = { version = "0.1.3", default_features = false }
rand_core = { version = "0.6.4", default-features = false }
rand = { version = "0.8.5", default_features = false }
lazy_static = { version = "1.4.0", default_features = false }
patches = { path = "../kampela_experiments_efm32pg23/patches" }
kampela-display-common = { path = "../kampela-display-common" }
clap = { version = "4.2.1", features = ["derive"], optional = true }
qrcodegen-noheap = {git = "https://github.com/Slesarew/QR-Code-generator", branch = "patch-1"}

[features]
default = ["std"]
std = ["embedded-graphics-simulator", "rand/default", "clap"]
embed = ["lazy_static/spin_no_std"]
