[package]
authors = ["Vera Abramova <abramova.vera@gmail.com>"]
edition = "2021"
name = "app"
version = "0.1.0"

[dependencies]
bitvec = {version = "1.0.1", default-features = false, features = ["alloc"]}
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.3.3"
efm32pg23_fix = {path = "../kampela_experiments_efm32pg23/efm32pg23_fix", features = ["critical-section", "rt"]}
rand_core = {version = "0.6.4", default-features = false}
patches = {path = "../kampela_experiments_efm32pg23/patches"}
embedded-alloc = "0.5.0" # embedded-alloc required nightly!
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"
embedded-text = {version = "0.5.0", default-features = false}
panic-halt = "0.2.0"
ux = { version = "0.1.3", default_features = false }
rand = { version = "0.8.5", default_features = false }
lazy_static = { version = "1.4.0", default_features = false, features = ["spin_no_std"]}

blake2-rfc = {version = "0.2.18", default-features = false}
frame-metadata = {git = "https://github.com/paritytech/frame-metadata", rev = "1ea329920838b3f4170f421cde53ce7e6a15ccee", default-features = false, features = ["v14", "decode"]}
hex = {version = "0.4.3", default-features = false, features = ["alloc"]}
parity-scale-codec = {version = "3.1.5", default-features = false, features = ["derive", "bit-vec"]}
scale-info = {version = "2.3.0", default-features = false}
substrate_parser = {git = "https://github.com/varovainen/substrate-parser", branch = "va-2023-03-09-traits-for-limited-ram", default-features = false, features = ["embed-display"]}

kampela-system = { path = "../kampela-system" }
kampela-ui = { path = "../kampela-ui" , default-features = false }
nalgebra = { version = "0.32.2", default-features = false, features = ["libm"] }

[profile.release]
codegen-units = 1
lto = true
