[package]
name = "ui-simulate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"
embedded-text = {version = "0.5.0", default-features = false}
bitvec = {version = "1.0.1", default-features = false, features = ["alloc"]}
embedded-graphics-simulator = "0.3.0"
ux = "0.1.5"
rand = "0.8.5"
lazy_static = "1.4.0"
patches = { path = "../kampela_experiments_efm32pg23/patches" }
