[package]
name = "efm32pg23_fix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.7.2", optional = true }
vcell = "0.1.2"

[features]
rt = ["cortex-m-rt/device"]
