[package]
name = "patches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bitvec = {version = "1.0.1", default-features = false, features = ["alloc"]}
hmac = "0.12.1"
pbkdf2 = {version = "0.11.0", default-features = false}
sha2 = {version = "0.10.6", default-features = false}
sp-core = {version = "12.0.0", default-features = false, features = ["full_crypto"]}
zeroize = "1.5.7"

[dev-dependencies]
hex = "0.4.3"
